# box3d-java

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: ci.yml  natives.yml
native/vhacd/: CMakeLists.txt  vhacd_wrapper.cpp  vhacd_wrapper.h
src/main/java/com/meekdev/box3d/: B3Body.java  B3BodyType.java  B3Capsule.java  B3Compound.java  B3DistanceJoint.java  B3Events.java  B3Filter.java  B3FilterJoint.java  B3Heightfield.java  B3Hull.java  B3Joint.java  B3JointType.java  B3Mesh.java  B3Model.java  B3MotorJoint.java  B3Mover.java  B3ParallelJoint.java  B3PrismaticJoint.java  B3Recording.java  B3Replay.java  B3RevoluteJoint.java  B3Shape.java  B3ShapeConfig.java  B3ShapeType.java  B3Sphere.java  B3SphericalJoint.java  B3SurfaceMat.java  B3TaskSystem.java  B3Transform.java  B3WeldJoint.java  B3WheelJoint.java  B3World.java  NativeLoader.java  Quat.java  Vec3.java
src/test/java/com/meekdev/box3d/: B3ApiCompletenessTest.java  B3ApiSurfaceTest.java  B3ApiTest.java  B3BodyTest.java  B3CarTest.java  B3DynamicModelTest.java  B3IntrospectionTest.java  B3MeshTest.java  B3ModelApiTest.java  B3MoverTest.java  B3RagdollTest.java  B3VhacdTest.java  B3WorldTest.java  BlockFloorRepro.java  NativeLoaderTest.java
